--- a/PTarefaGrupo1/src/view/TelaPrincipal.form
+++ b/PTarefaGrupo1/src/view/TelaPrincipal.form
@@ -76,7 +76,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="275" max="-2" attributes="0"/>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Component id="btnAlterarTarefa" min="-2" max="-2" attributes="0"/>
                       <Component id="btnExcluirTarefa" min="-2" max="-2" attributes="0"/>
@@ -133,7 +133,7 @@
         <Component class="javax.swing.JButton" name="btnAddTarefa">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\alexsander_leal\Downloads\Create.png"/>
+              <Image iconType="3" name="/image/Create.png"/>
             </Property>
           </Properties>
           <Events>
@@ -143,14 +143,17 @@
         <Component class="javax.swing.JButton" name="btnAlterarTarefa">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\alexsander_leal\Downloads\Modify.png"/>
+              <Image iconType="3" name="/image/Modify.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAlterarTarefaActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnExcluirTarefa">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\alexsander_leal\Downloads\Trash.png"/>
+              <Image iconType="3" name="/image/Trash.png"/>
             </Property>
           </Properties>
         </Component>
@@ -207,7 +210,7 @@
         <Component class="javax.swing.JButton" name="btnAddLista">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\alexsander_leal\Downloads\Create.png"/>
+              <Image iconType="3" name="/image/Create.png"/>
             </Property>
           </Properties>
           <Events>
@@ -217,14 +220,14 @@
         <Component class="javax.swing.JButton" name="btnAddAlterarLista">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\alexsander_leal\Downloads\Modify.png"/>
+              <Image iconType="3" name="/image/Modify.png"/>
             </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btnAddExcluirLista">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\alexsander_leal\Downloads\Trash.png"/>
+              <Image iconType="3" name="/image/Trash.png"/>
             </Property>
           </Properties>
         </Component>
