Muitos arquivos alterados

--- a/PTarefaGrupo1/src/view/TelaTarefa.form
+++ b/PTarefaGrupo1/src/view/TelaTarefa.form
@@ -97,10 +97,12 @@
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="cgMes" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
-                      <Component id="cgAno" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="cgDia" alignment="1" min="-2" pref="26" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="cgMes" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
+                          <Component id="cgAno" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="cbxFeito" min="-2" max="-2" attributes="0"/>
