--- a/PTarefaGrupo1/src/view/TelaPrincipal.form
+++ b/PTarefaGrupo1/src/view/TelaPrincipal.form
@@ -223,6 +223,9 @@
               <Image iconType="3" name="/image/Modify.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAddAlterarListaActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnAddExcluirLista">
           <Properties>
