--- a/PTarefaGrupo1/src/view/TelaPrincipal.form
+++ b/PTarefaGrupo1/src/view/TelaPrincipal.form
@@ -156,6 +156,9 @@
               <Image iconType="3" name="/image/Trash.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnExcluirTarefaActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
