Codificado tela lista; Codificado btnSalvar lista; Codificado btnAddLista lista; Codificado btnAlterar lista; Codificado btnExcluir lista;

--- a/PTarefaGrupo1/src/view/TelaPrincipal.form
+++ b/PTarefaGrupo1/src/view/TelaPrincipal.form
@@ -236,6 +236,9 @@
               <Image iconType="3" name="/image/Trash.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAddExcluirListaActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
