--- a/PTarefaGrupo1/src/view/TelaPrincipal.form
+++ b/PTarefaGrupo1/src/view/TelaPrincipal.form
@@ -209,6 +209,9 @@
               <StringArray count="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbListaActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnAddLista">
           <Properties>
